Docker entrypoint updates
- Reorganize file
- Export `MAYAN_USER_GID, MAYAN_USER_UID`, and
  `MAYAN_GUNICORN_TEMPORARY_DIRECTORY`.
- Add `MAYAN_DOCKER_SCRIPT_PRE_SETUP` and
  `MAYAN_DOCKER_SCRIPT_POST_SETUP`.

Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/mayan/apps/platform/templates/platform/docker_entrypoint.tmpl
+++ b/mayan/apps/platform/templates/platform/docker_entrypoint.tmpl
@@ -1,77 +1,7 @@
 #!/bin/sh
 
+# -e  Exit immediately if a command exits with a non-zero status.
 set -e
-echo "mayan: starting entrypoint.sh"
-INSTALL_FLAG=/var/lib/mayan/system/SECRET_KEY
-CELERY_CONCURRENCY_ARGUMENT=--concurrency=
-CELERY_MAX_MEMORY_PER_CHILD_ARGUMENT=--max-memory-per-child=
-CELERY_MAX_TASKS_PER_CHILD_ARGUMENT=--max-tasks-per-child=
-
-DEFAULT_USER_GID=1000
-DEFAULT_USER_UID=1000
-
-MAYAN_USER_GID=${MAYAN_USER_GID:-${DEFAULT_USER_GID}}
-MAYAN_USER_UID=${MAYAN_USER_UID:-${DEFAULT_USER_UID}}
-
-export MAYAN_ALLOWED_HOSTS='["*"]'
-export MAYAN_BIN=/opt/mayan-edms/bin/mayan-edms.py
-export MAYAN_INSTALL_DIR=/opt/mayan-edms
-export MAYAN_PYTHON_BIN_DIR=/opt/mayan-edms/bin/
-export MAYAN_MEDIA_ROOT=/var/lib/mayan
-export MAYAN_SETTINGS_MODULE=${MAYAN_SETTINGS_MODULE:-mayan.settings.production}
-
-# Set DJANGO_SETTINGS_MODULE to MAYAN_SETTINGS_MODULE to avoid two
-# different environments for the setting file.
-export DJANGO_SETTINGS_MODULE=${MAYAN_SETTINGS_MODULE}
-
-export MAYAN_GUNICORN_BIN=${MAYAN_PYTHON_BIN_DIR}gunicorn
-export MAYAN_GUNICORN_JITTER=${MAYAN_GUNICORN_JITTER:-{{GUNICORN_JITTER}}}
-export MAYAN_GUNICORN_LIMIT_REQUEST_LINE=${MAYAN_GUNICORN_LIMIT_REQUEST_LINE:-{{GUNICORN_LIMIT_REQUEST_LINE}}}
-export MAYAN_GUNICORN_MAX_REQUESTS=${MAYAN_GUNICORN_MAX_REQUESTS:-{{GUNICORN_MAX_REQUESTS}}}
-export MAYAN_GUNICORN_WORKER_CLASS=${MAYAN_GUNICORN_WORKER_CLASS:-{{GUNICORN_WORKER_CLASS}}}
-export MAYAN_GUNICORN_WORKERS=${MAYAN_GUNICORN_WORKERS:-{{GUNICORN_WORKERS}}}
-export MAYAN_GUNICORN_TIMEOUT=${MAYAN_GUNICORN_TIMEOUT:-{{GUNICORN_TIMEOUT}}}
-export MAYAN_PIP_BIN=${MAYAN_PYTHON_BIN_DIR}pip
-export MAYAN_STATIC_ROOT=${MAYAN_INSTALL_DIR}/static
-
-# Setup worker environment variables.
-{% for worker in workers %}
-MAYAN_{{ worker.name|upper }}_CONCURRENCY=${MAYAN_{{ worker.name|upper }}_CONCURRENCY:-{{ worker.concurrency }}}
-
-if [ "$MAYAN_{{ worker.name|upper }}_CONCURRENCY" -eq 0 ]; then
-    MAYAN_{{ worker.name|upper }}_CONCURRENCY=
-else
-    MAYAN_{{ worker.name|upper }}_CONCURRENCY="${CELERY_CONCURRENCY_ARGUMENT}${MAYAN_{{ worker.name|upper }}_CONCURRENCY}"
-fi
-export MAYAN_{{ worker.name|upper }}_CONCURRENCY
-
-MAYAN_{{ worker.name|upper }}_MAX_MEMORY_PER_CHILD=${MAYAN_{{ worker.name|upper }}_MAX_MEMORY_PER_CHILD:-{{ worker.maximum_memory_per_child }}}
-
-if [ "$MAYAN_{{ worker.name|upper }}_MAX_MEMORY_PER_CHILD" -eq 0 ]; then
-    MAYAN_{{ worker.name|upper }}_MAX_MEMORY_PER_CHILD=
-else
-    MAYAN_{{ worker.name|upper }}_MAX_MEMORY_PER_CHILD="${CELERY_MAX_MEMORY_PER_CHILD_ARGUMENT}${MAYAN_{{ worker.name|upper }}_MAX_MEMORY_PER_CHILD}"
-fi
-export MAYAN_{{ worker.name|upper }}_MAX_MEMORY_PER_CHILD
-
-MAYAN_{{ worker.name|upper }}_MAX_TASKS_PER_CHILD=${MAYAN_{{ worker.name|upper }}_MAX_TASKS_PER_CHILD:-{{ worker.maximum_tasks_per_child }}}
-
-if [ "$MAYAN_{{ worker.name|upper }}_MAX_TASKS_PER_CHILD" -eq 0 ]; then
-    MAYAN_{{ worker.name|upper }}_MAX_TASKS_PER_CHILD=
-else
-    MAYAN_{{ worker.name|upper }}_MAX_TASKS_PER_CHILD="${CELERY_MAX_TASKS_PER_CHILD_ARGUMENT}${MAYAN_{{ worker.name|upper }}_MAX_TASKS_PER_CHILD}"
-fi
-export MAYAN_{{ worker.name|upper }}_MAX_TASKS_PER_CHILD
-{% endfor %}
-
-if mount | grep '/dev/shm' > /dev/null; then
-    MAYAN_GUNICORN_TEMPORARY_DIRECTORY="--worker-tmp-dir /dev/shm"
-else
-    MAYAN_GUNICORN_TEMPORARY_DIRECTORY=
-fi
-
-# Allow importing of user setting modules.
-export PYTHONPATH=$PYTHONPATH:$MAYAN_MEDIA_ROOT
 
 apt_get_install() {
     apt-get -q update
@@ -136,11 +66,90 @@ update_uid_gid() {
 }
 
 # Start execution here.
+echo "mayan: starting entrypoint.sh"
+INSTALL_FLAG=/var/lib/mayan/system/SECRET_KEY
+CELERY_CONCURRENCY_ARGUMENT=--concurrency=
+CELERY_MAX_MEMORY_PER_CHILD_ARGUMENT=--max-memory-per-child=
+CELERY_MAX_TASKS_PER_CHILD_ARGUMENT=--max-tasks-per-child=
+
+DEFAULT_USER_GID=1000
+DEFAULT_USER_UID=1000
+
+export MAYAN_USER_GID=${MAYAN_USER_GID:-${DEFAULT_USER_GID}}
+export MAYAN_USER_UID=${MAYAN_USER_UID:-${DEFAULT_USER_UID}}
+
+export MAYAN_ALLOWED_HOSTS='["*"]'
+export MAYAN_BIN=/opt/mayan-edms/bin/mayan-edms.py
+export MAYAN_INSTALL_DIR=/opt/mayan-edms
+export MAYAN_PYTHON_BIN_DIR=/opt/mayan-edms/bin/
+export MAYAN_MEDIA_ROOT=/var/lib/mayan
+export MAYAN_SETTINGS_MODULE=${MAYAN_SETTINGS_MODULE:-mayan.settings.production}
+
+# Set DJANGO_SETTINGS_MODULE to MAYAN_SETTINGS_MODULE to avoid two
+# different environments for the setting file.
+export DJANGO_SETTINGS_MODULE=${MAYAN_SETTINGS_MODULE}
+
+export MAYAN_GUNICORN_BIN=${MAYAN_PYTHON_BIN_DIR}gunicorn
+export MAYAN_GUNICORN_JITTER=${MAYAN_GUNICORN_JITTER:-{{GUNICORN_JITTER}}}
+export MAYAN_GUNICORN_LIMIT_REQUEST_LINE=${MAYAN_GUNICORN_LIMIT_REQUEST_LINE:-{{GUNICORN_LIMIT_REQUEST_LINE}}}
+export MAYAN_GUNICORN_MAX_REQUESTS=${MAYAN_GUNICORN_MAX_REQUESTS:-{{GUNICORN_MAX_REQUESTS}}}
+export MAYAN_GUNICORN_WORKER_CLASS=${MAYAN_GUNICORN_WORKER_CLASS:-{{GUNICORN_WORKER_CLASS}}}
+export MAYAN_GUNICORN_WORKERS=${MAYAN_GUNICORN_WORKERS:-{{GUNICORN_WORKERS}}}
+export MAYAN_GUNICORN_TIMEOUT=${MAYAN_GUNICORN_TIMEOUT:-{{GUNICORN_TIMEOUT}}}
+export MAYAN_PIP_BIN=${MAYAN_PYTHON_BIN_DIR}pip
+export MAYAN_STATIC_ROOT=${MAYAN_INSTALL_DIR}/static
+
+# Setup worker environment variables.
+{% for worker in workers %}
+MAYAN_{{ worker.name|upper }}_CONCURRENCY=${MAYAN_{{ worker.name|upper }}_CONCURRENCY:-{{ worker.concurrency }}}
+
+if [ "$MAYAN_{{ worker.name|upper }}_CONCURRENCY" -eq 0 ]; then
+    MAYAN_{{ worker.name|upper }}_CONCURRENCY=
+else
+    MAYAN_{{ worker.name|upper }}_CONCURRENCY="${CELERY_CONCURRENCY_ARGUMENT}${MAYAN_{{ worker.name|upper }}_CONCURRENCY}"
+fi
+export MAYAN_{{ worker.name|upper }}_CONCURRENCY
+
+MAYAN_{{ worker.name|upper }}_MAX_MEMORY_PER_CHILD=${MAYAN_{{ worker.name|upper }}_MAX_MEMORY_PER_CHILD:-{{ worker.maximum_memory_per_child }}}
+
+if [ "$MAYAN_{{ worker.name|upper }}_MAX_MEMORY_PER_CHILD" -eq 0 ]; then
+    MAYAN_{{ worker.name|upper }}_MAX_MEMORY_PER_CHILD=
+else
+    MAYAN_{{ worker.name|upper }}_MAX_MEMORY_PER_CHILD="${CELERY_MAX_MEMORY_PER_CHILD_ARGUMENT}${MAYAN_{{ worker.name|upper }}_MAX_MEMORY_PER_CHILD}"
+fi
+export MAYAN_{{ worker.name|upper }}_MAX_MEMORY_PER_CHILD
+
+MAYAN_{{ worker.name|upper }}_MAX_TASKS_PER_CHILD=${MAYAN_{{ worker.name|upper }}_MAX_TASKS_PER_CHILD:-{{ worker.maximum_tasks_per_child }}}
+
+if [ "$MAYAN_{{ worker.name|upper }}_MAX_TASKS_PER_CHILD" -eq 0 ]; then
+    MAYAN_{{ worker.name|upper }}_MAX_TASKS_PER_CHILD=
+else
+    MAYAN_{{ worker.name|upper }}_MAX_TASKS_PER_CHILD="${CELERY_MAX_TASKS_PER_CHILD_ARGUMENT}${MAYAN_{{ worker.name|upper }}_MAX_TASKS_PER_CHILD}"
+fi
+export MAYAN_{{ worker.name|upper }}_MAX_TASKS_PER_CHILD
+{% endfor %}
+
+if mount | grep '/dev/shm' > /dev/null; then
+    export MAYAN_GUNICORN_TEMPORARY_DIRECTORY="--worker-tmp-dir /dev/shm"
+else
+    export MAYAN_GUNICORN_TEMPORARY_DIRECTORY=
+fi
+
+# Allow importing of user setting modules.
+export PYTHONPATH=$PYTHONPATH:$MAYAN_MEDIA_ROOT
+
+if [ "${MAYAN_DOCKER_SCRIPT_PRE_SETUP}" ]; then
+    eval "${MAYAN_DOCKER_SCRIPT_PRE_SETUP}"
+fi
+
 ${MAYAN_PYTHON_BIN_DIR}python3 /usr/local/bin/wait.py ${MAYAN_DOCKER_WAIT}
 update_uid_gid
 os_package_installs || true
 pip_installs || true
 
+if [ "${MAYAN_DOCKER_SCRIPT_POST_SETUP}" ]; then
+    eval "${MAYAN_DOCKER_SCRIPT_POST_SETUP}"
+fi
 
 case "$1" in
 
