--- a/mayan/apps/appearance/templates/appearance/app/head.html
+++ b/mayan/apps/appearance/templates/appearance/app/head.html
@@ -1,3 +1,12 @@
+{% load static %}
+
+<link href="{% static 'appearance/node_modules/@fortawesome/fontawesome-free/css/all.min.css' %}" media="screen" rel="stylesheet" type="text/css" />
+<link href="{% static 'appearance/node_modules/bootswatch/flatly/bootstrap.min.css' %}" media="screen" rel="stylesheet" type="text/css" />
+<link href="{% static 'appearance/node_modules/@fancyapps/fancybox/dist/jquery.fancybox.min.css' %}" media="screen" rel="stylesheet" type="text/css" />
+<link href="{% static 'appearance/node_modules/select2/dist/css/select2.min.css' %}" media="screen" rel="stylesheet" type="text/css" />
+<link href="{% static 'appearance/node_modules/toastr/build/toastr.min.css' %}" media="screen" rel="stylesheet" type="text/css" />
+<link href="{% static 'appearance/css/base.css' %}" media="screen" rel="stylesheet" type="text/css" />
+
 <style>
     <!--
     Nullify the 5px padding to the right
