--- a/mayan/apps/appearance/templates/appearance/root.html
+++ b/mayan/apps/appearance/templates/appearance/root.html
@@ -2,7 +2,6 @@
 {% load static %}
 
 {% load appearance_tags %}
-{% load common_tags %}
 {% load navigation_tags %}
 {% load smart_settings_tags %}
 
@@ -19,12 +18,6 @@
             {% endblock base_title %}
         </title>
 
-        <link href="{% static 'appearance/node_modules/@fortawesome/fontawesome-free/css/all.min.css' %}" media="screen" rel="stylesheet" type="text/css" />
-        <link href="{% static 'appearance/node_modules/bootswatch/flatly/bootstrap.min.css' %}" media="screen" rel="stylesheet" type="text/css" />
-        <link href="{% static 'appearance/node_modules/@fancyapps/fancybox/dist/jquery.fancybox.min.css' %}" media="screen" rel="stylesheet" type="text/css" />
-        <link href="{% static 'appearance/node_modules/select2/dist/css/select2.min.css' %}" media="screen" rel="stylesheet" type="text/css" />
-        <link href="{% static 'appearance/node_modules/toastr/build/toastr.min.css' %}" media="screen" rel="stylesheet" type="text/css" />
-        <link href="{% static 'appearance/css/base.css' %}" media="screen" rel="stylesheet" type="text/css" />
         <style id="style-javascript"></style>
         {% appearance_app_templates template_name='head' %}
         {% block stylesheets %}{% endblock %}
@@ -54,8 +47,8 @@
             <div class="modal-dialog modal-lg">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                        <h4 class="modal-title">{% trans 'Server error' %}</h4>
+                        <button aria-label="Close" class="close" data-dismiss="modal" type="button"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title">{% trans 'Server error' %}</h4>type="submit"
                     </div>
                     <div class="modal-body">
                     </div>
@@ -77,72 +70,12 @@
             </div>
         </script>
 
-        <script src="{% static 'appearance/node_modules/jquery/dist/jquery.min.js' %}" type="text/javascript"></script>
-        <script src="{% static 'appearance/node_modules/bootstrap/dist/js/bootstrap.min.js' %}" type="text/javascript"></script>
-        <script src="{% static 'appearance/packages/jquery.scrollview.js' %}" type="text/javascript"></script>
-
-        <script src="{% static 'appearance/node_modules/jquery-lazyload/jquery.lazyload.js' %}" type="text/javascript"></script>
-        <script src="{% static 'appearance/node_modules/jquery-lazyload/jquery.scrollstop.js' %}" type="text/javascript"></script>
-
-        <script src="{% static 'appearance/node_modules/@fancyapps/fancybox/dist/jquery.fancybox.min.js' %}" type="text/javascript"></script>
-        <script src="{% static 'appearance/node_modules/select2/dist/js/select2.min.js' %}" type="text/javascript"></script>
-        <script src="{% static 'appearance/node_modules/toastr/build/toastr.min.js' %}" type="text/javascript"></script>
-        <script src="{% static 'appearance/node_modules/jquery-match-height/dist/jquery.matchHeight-min.js' %}" type="text/javascript"></script>
-        <script src="{% static 'appearance/node_modules/@fortawesome/fontawesome-free/js/all.min.js' %}" data-auto-replace-svg="nest" type="text/javascript"></script>
-        <script src="{% static 'appearance/node_modules/urijs/src/IPv6.js' %}" type="text/javascript"></script>
-        <script src="{% static 'appearance/node_modules/urijs/src/punycode.js' %}" type="text/javascript"></script>
-        <script src="{% static 'appearance/node_modules/urijs/src/SecondLevelDomains.js' %}" type="text/javascript"></script>
-        <script src="{% static 'appearance/node_modules/urijs/src/URI.js' %}" type="text/javascript"></script>
-        <script src="{% static 'appearance/node_modules/urijs/src/URITemplate.js' %}" type="text/javascript"></script>
-        <script src="{% static 'appearance/node_modules/urijs/src/URI.fragmentURI.js' %}" type="text/javascript"></script>
-        <script src="{% static 'appearance/node_modules/jquery-form/dist/jquery.form.min.js' %}" type="text/javascript"></script>
-        <script src="{% static 'appearance/js/mayan_app.js' %}" type="text/javascript"></script>
-        <script src="{% static 'appearance/js/mayan_image.js' %}" type="text/javascript"></script>
-        <script src="{% static 'appearance/js/partial_navigation.js' %}" type="text/javascript"></script>
         <script>
             {# Transfer variable from Django to javascript #}
             const initialURL = '{% url home_view %}';
             const djangoDEBUG = {% if debug %}true{% else %}false{% endif %};
         </script>
-        <script src="{% static 'appearance/js/base.js' %}" type="text/javascript"></script>
-        <script>
-            {% smart_setting "APPEARANCE_MENU_POLLING_INTERVAL" as menu_polling_interval %}
-            const app = new MayanApp({
-                ajaxMenusOptions: [
-                    {
-                        callback: function (options) {
-                            MayanApp.updateNavbarState();
-                        },
-                        interval: {% if menu_polling_interval == 'None' %}null{% else %}{{ menu_polling_interval }}{% endif %},
-                        menuSelector: '#menu-main',
-                        name: 'menu_main',
-                        url: '{% url "rest_api:template-detail" "menu_main" %}'
-                    },
-                    {
-                        interval: {% if menu_polling_interval == 'None' %}null{% else %}{{ menu_polling_interval }}{% endif %},
-                        menuSelector: '#menu-topbar',
-                        name: 'menu_topbar',
-                        url: '{% url "rest_api:template-detail" "menu_topbar" %}'
-                    },
-                ],
-                messagePosition: '{% smart_setting "APPEARANCE_MESSAGE_POSITION" %}'
-            });
 
-            const afterBaseLoad = function (djangoMessages) {
-                MayanImage.intialize({
-                    templateInvalidImage: '{% spaceless %}{% include "documents/invalid_document.html" %}{% endspaceless %}'
-                });
-                app.doToastrMessages(djangoMessages);
-                app.resizeFullHeight();
-                app.setupSelect2();
-                app.setupScrollView();
-                app.setupListToolbar();
-            }
-
-            jQuery(document).ready(function() {
-                app.initialize();
-            });
-        </script>
         {% appearance_app_templates template_name='foot' %}
     </body>
 </html>
