--- a/mayan/apps/appearance/templates/appearance/root.html
+++ b/mayan/apps/appearance/templates/appearance/root.html
@@ -2,6 +2,7 @@
 {% load static %}
 
 {% load appearance_tags %}
+{% load common_tags %}
 {% load navigation_tags %}
 {% load smart_settings_tags %}
 
@@ -9,6 +10,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
     <head>
+        <meta content="{% common_project_information '__description__' as project_description %}{% trans project_description %}" name="description" >
         <meta content="width=device-width, initial-scale=1, maximum-scale=5" name="viewport">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta http-equiv="Content-Language" content="{{ LANGUAGE_CODE }}" />
