Remove static HTML ID
Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/mayan/apps/appearance/templates/appearance/menus/menu_main.html
+++ b/mayan/apps/appearance/templates/appearance/menus/menu_main.html
@@ -56,7 +56,7 @@
                             </div>
                         {% else %}
                             <div class="panel panel-default">
-                                <div class="panel-heading" id="headingOne" role="tab">
+                                <div class="panel-heading" role="tab">
                                     <h4 class="panel-title">
                                         {% include 'navigation/generic_link_instance.html' %}
                                     </h4>
