--- a/mayan/apps/platform/templates/platform/supervisord.tmpl
+++ b/mayan/apps/platform/templates/platform/supervisord.tmpl
@@ -2,17 +2,17 @@
 [supervisord]
 environment=
     PYTHONPATH="{{ user_settings_folder }}",
-    DJANGO_SETTINGS_MODULE=mayan.settings.production,
     MAYAN_ALLOWED_HOSTS='["*"]',
     MAYAN_MEDIA_ROOT="{{ MEDIA_ROOT }}",
     MAYAN_PYTHON_BIN_DIR={{ INSTALLATION_PATH }}bin/,
     MAYAN_GUNICORN_BIN={{ INSTALLATION_PATH }}bin/gunicorn,
-    MAYAN_GUNICORN_WORKERS={{ GUNICORN_WORKERS }},
-    MAYAN_GUNICORN_MAX_REQUESTS={{ GUNICORN_MAX_REQUESTS }},
-    MAYAN_GUNICORN_JITTER={{ GUNICORN_JITTER }},
-    MAYAN_GUNICORN_WORKER_CLASS={{ GUNICORN_WORKER_CLASS }},
-    MAYAN_GUNICORN_TIMEOUT={{ GUNICORN_TIMEOUT }},
     MAYAN_GUNICORN_LIMIT_REQUEST_LINE={{ GUNICORN_LIMIT_REQUEST_LINE }},
+    MAYAN_GUNICORN_MAX_REQUESTS={{ GUNICORN_MAX_REQUESTS }},
+    MAYAN_GUNICORN_REQUESTS_JITTER={{ GUNICORN_REQUESTS_JITTER }},
+    MAYAN_GUNICORN_TEMPORARY_DIRECTORY="",
+    MAYAN_GUNICORN_TIMEOUT={{ GUNICORN_TIMEOUT }},
+    MAYAN_GUNICORN_WORKER_CLASS={{ GUNICORN_WORKER_CLASS }},
+    MAYAN_GUNICORN_WORKERS={{ GUNICORN_WORKERS }},
     MAYAN_SETTINGS_MODULE=mayan.settings.production,
     {% spaceless_plus %}
     {% for worker in workers %}
