--- a/mayan/apps/appearance/templates/appearance/app/foot.html
+++ b/mayan/apps/appearance/templates/appearance/app/foot.html
@@ -22,7 +22,6 @@
 <script src="{% static 'appearance/node_modules/urijs/src/URI.fragmentURI.js' %}" type="text/javascript"></script>
 <script src="{% static 'appearance/node_modules/jquery-form/dist/jquery.form.min.js' %}" type="text/javascript"></script>
 <script src="{% static 'appearance/js/mayan_app.js' %}" type="text/javascript"></script>
-<script src="{% static 'appearance/js/mayan_image.js' %}" type="text/javascript"></script>
 <script src="{% static 'appearance/js/partial_navigation.js' %}" type="text/javascript"></script>
 <script src="{% static 'appearance/js/base.js' %}" type="text/javascript"></script>
 
@@ -49,16 +48,11 @@
         messagePosition: '{% smart_setting "APPEARANCE_MESSAGE_POSITION" %}'
     });
 
-    const afterBaseLoad = function (djangoMessages) {
-        MayanImage.intialize({
-            templateInvalidImage: '{% spaceless %}{% include "documents/invalid_document.html" %}{% endspaceless %}'
-        });
-        app.doToastrMessages(djangoMessages);
-        app.resizeFullHeight();
-        app.setupSelect2();
-        app.setupScrollView();
-        app.setupListToolbar();
-    }
+    app.addAfterBaseLoadCallback({func: app.doToastrMessages, self: app});
+    app.addAfterBaseLoadCallback({func: app.resizeFullHeight, self: app});
+    app.addAfterBaseLoadCallback({func: app.setupSelect2, self: app});
+    app.addAfterBaseLoadCallback({func: app.setupScrollView, self: app});
+    app.addAfterBaseLoadCallback({func: app.setupListToolbar, self: app});
 
     jQuery(document).ready(function() {
         app.initialize();
