--- a/mayan/apps/appearance/templates/appearance/base.html
+++ b/mayan/apps/appearance/templates/appearance/base.html
@@ -60,7 +60,7 @@
 
             {% if sidebar_menus_link_results %}
                 <div id="sidebar">
-                    <div class="list-group">
+                    <ul class="list-group">
                         {% for menu_link_result in sidebar_menus_link_results %}
                             {% for link_group in menu_link_result.link_groups %}
                                 {% if sidebar_menus_link_results|length > 1 %}
@@ -78,14 +78,16 @@
                                 {% with 'true' as hide_active_anchor %}
                                 {% with 'active' as link_class_active %}
                                 {% with 'list-group-item btn-sm' as link_classes %}
+                                {% with 'true' as as_li %}
                                     {% include 'navigation/generic_navigation.html' %}
+                                {% endwith %}
                                 {% endwith %}
                                 {% endwith %}
                                 {% endwith %}
                                 {% endwith %}
                             {% endfor %}
                         {% endfor %}
-                    </div>
+                    </ul>
                 </div>
             {% endif %}
         </div>
@@ -111,7 +113,7 @@
             {% endfor %}
         ];
 
-        afterBaseLoad(djangoMessages);
+        app.afterBaseLoad({'djangoMessages': djangoMessages});
     });
 </script>
 {% endspaceless %}
