--- a/mayan/apps/cabinets/templates/cabinets/app/head.html
+++ b/mayan/apps/cabinets/templates/cabinets/app/head.html
@@ -1,19 +1,3 @@
-<style>
-    .cabinet-display {
-        font-style: italic;
-    }
+{% load static %}
 
-    .label-cabinet a {
-        color: black;
-        text-decoration: none !important;
-        white-space: normal;
-    }
-
-    #jstree {
-        max-width: 100%;
-        overflow: auto;
-        font: 11px Verdana, sans-serif;
-        padding: 0px;
-        padding-bottom: 10px; /* Padding for scrollbar */
-    }
-</style>
+<link href="{% static 'cabinets/css/cabinets.css' %}" media="screen" rel="stylesheet" type="text/css" />
