--- a/mayan/apps/tags/templates/tags/app/head.html
+++ b/mayan/apps/tags/templates/tags/app/head.html
@@ -1,23 +1,3 @@
-<style>
-    .panel-item .panel-body .label-tag {
-        white-space: normal;
-    }
+{% load static %}
 
-    .tag-container .label {
-        margin-right: 2px;
-    }
-
-    .label-tag a {
-        color: white;
-        text-decoration: none !important;
-    }
-
-    .label-tag {
-        text-shadow: 0px 0px 2px #000;
-        box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5);
-    }
-
-    .select2-container--default .select2-selection--multiple .select2-selection__choice .label {
-        padding-bottom: 100px;
-    }
-</style>
+<link href="{% static 'tags/css/tags.css' %}" media="screen" rel="stylesheet" type="text/css" />
