--- a/mayan/apps/appearance/templates/appearance/root.html
+++ b/mayan/apps/appearance/templates/appearance/root.html
@@ -50,7 +50,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <button aria-label="Close" class="close" data-dismiss="modal" type="button"><span aria-hidden="true">&times;</span></button>
-                        <h4 class="modal-title">{% trans 'Server error' %}</h4>type="submit"
+                        <h4 class="modal-title">{% trans 'Server error' %}</h4>
                     </div>
                     <div class="modal-body">
                     </div>
