Export `MAYAN_GUNICORN_TEMPORARY_DIRECTORY`
Ensures it is available to `supervisord`.

Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/mayan/apps/platform/templates/platform/docker_entrypoint.tmpl
+++ b/mayan/apps/platform/templates/platform/docker_entrypoint.tmpl
@@ -65,9 +65,9 @@ export MAYAN_{{ worker.name|upper }}_MAX_TASKS_PER_CHILD
 {% endfor %}
 
 if mount | grep '/dev/shm' > /dev/null; then
-    MAYAN_GUNICORN_TEMPORARY_DIRECTORY="--worker-tmp-dir /dev/shm"
+    export MAYAN_GUNICORN_TEMPORARY_DIRECTORY="--worker-tmp-dir /dev/shm"
 else
-    MAYAN_GUNICORN_TEMPORARY_DIRECTORY=
+    export MAYAN_GUNICORN_TEMPORARY_DIRECTORY=
 fi
 
 # Allow importing of user setting modules.
