--- a/mayan/apps/appearance/templates/appearance/base.html
+++ b/mayan/apps/appearance/templates/appearance/base.html
@@ -63,7 +63,7 @@
                     <ul class="list-group">
                         {% for menu_link_result in sidebar_menus_link_results %}
                             {% for link_group in menu_link_result.link_groups %}
-                                {% if sidebar_menus_link_results|length > 1 %}
+                                {% if menu_link_result|length > 1 %}
                                     {% if menu_link_result.menu.name not in 'facet,list facet'|split:"," %}
                                         <li class="dropdown-header">{{ menu_link_result.menu.label }}</li>
                                     {% else %}
