--- a/mayan/apps/platform/templates/platform/gitlab-ci.tmpl
+++ b/mayan/apps/platform/templates/platform/gitlab-ci.tmpl
@@ -35,6 +35,7 @@ job_docker_build:
   tags:
     - postgres
   variables:
+    DOCKER_DRIVER: overlay2
     POSTGRES_DB: "{{ DEFAULT_DATABASE_NAME }}"
     POSTGRES_PASSWORD: "{{ DEFAULT_DATABASE_PASSWORD }}"
     POSTGRES_USER: "{{ DEFAULT_DATABASE_USER }}"
@@ -67,6 +68,8 @@ job_docker_push_major:
   services:
     - {{ DOCKER_DIND_IMAGE_VERSION }}
   stage: stage_push_docker
+  variables:
+    DOCKER_DRIVER: overlay2
 
 job_docker_push_minor:
   before_script:
@@ -93,6 +96,8 @@ job_docker_push_minor:
   services:
     - {{ DOCKER_DIND_IMAGE_VERSION }}
   stage: stage_push_docker
+  variables:
+    DOCKER_DRIVER: overlay2
 
 job_docker_nightly:
   before_script:
@@ -108,6 +113,8 @@ job_docker_nightly:
   services:
     - {{ DOCKER_DIND_IMAGE_VERSION }}
   stage: stage_build_docker
+  variables:
+    DOCKER_DRIVER: overlay2
 
 job_docker_testing:
   before_script:
@@ -124,6 +131,8 @@ job_docker_testing:
   services:
     - {{ DOCKER_DIND_IMAGE_VERSION }}
   stage: stage_build_docker
+  variables:
+    DOCKER_DRIVER: overlay2
 
 # Documentation
 
