Add the a "init or upgrade" command
Add the `run_initialsetup_or_performupgrade` command to the
Docker entrypoint.

Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/mayan/apps/platform/templates/platform/docker/entrypoint.tmpl
+++ b/mayan/apps/platform/templates/platform/docker/entrypoint.tmpl
@@ -180,6 +180,10 @@ run_performupgrade)
     performupgrade
     ;;
 
+run_initialsetup_or_performupgrade)
+    make_ready
+    ;;
+
 run_tests)
     make_ready
     shift
