--- a/mayan/apps/appearance/templates/appearance/base_plain.html
+++ b/mayan/apps/appearance/templates/appearance/base_plain.html
@@ -2,7 +2,6 @@
 {% load static %}
 
 {% load appearance_tags %}
-{% load common_tags %}
 {% load navigation_tags %}
 {% load smart_settings_tags %}
 
@@ -10,9 +9,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
     <head>
-        <meta content="width=device-width, initial-scale=1, maximum-scale=5" name="viewport">
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <meta http-equiv="Content-Language" content="{{ LANGUAGE_CODE }}" />
+        {% include 'appearance/partials/meta_tags.html' %}
         <title>
             {% block base_title %}
                 {% block title %}{% endblock %} :: {% block project_name %}    {% smart_setting 'COMMON_PROJECT_TITLE' as setting_project_title %}{% endblock %}
