--- a/mayan/apps/converter/templates/converter/app/foot.html
+++ b/mayan/apps/converter/templates/converter/app/foot.html
@@ -3,13 +3,14 @@
 <script src="{% static 'converter/js/mayan_image.js' %}" type="text/javascript"></script>
 
 <script>
+    MayanImage.setup({
+        templateInvalidImage: '{% spaceless %}{% include "documents/invalid_document.html" %}{% endspaceless %}'
+    });
+
     app.addAfterBaseLoadCallback(
         {
             func: MayanImage.intialize,
             self: MayanImage,
-            args: {
-                templateInvalidImage: '{% spaceless %}{% include "documents/invalid_document.html" %}{% endspaceless %}'
-            }
         }
     );
 </script>
