--- a/mayan/apps/converter/templates/converter/forms/widgets/base64_image.html
+++ b/mayan/apps/converter/templates/converter/forms/widgets/base64_image.html
@@ -1,3 +1,3 @@
 {% load i18n %}
-<img class="img-responsive" name="{{ widget.name }}" {% include 'django/forms/widgets/attrs.html' %} src="{{ widget.value }}" style="margin:auto;" />
+<img class="img-responsive" name="{{ widget.name }}" {% include 'django/forms/widgets/attrs.html' %} src="{{ widget.value }}" />
 
