Define the mime types app dependencies
Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/mayan/apps/platform/templates/platform/docker/dockerfile.tmpl
+++ b/mayan/apps/platform/templates/platform/docker/dockerfile.tmpl
@@ -47,6 +47,7 @@ apt-get update \
     gnupg1 \
     graphviz \
     libarchive-zip-perl \
+    libfile-mimeinfo-perl \
     libfuse2 \
     libldap-2.4-2 \
     libmagic1 \
