Add nfs-common libraries
Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/mayan/apps/platform/templates/platform/docker/dockerfile.tmpl
+++ b/mayan/apps/platform/templates/platform/docker/dockerfile.tmpl
@@ -53,6 +53,7 @@ apt-get update \
     libmariadb3 \
     libpq5 \
     libsasl2-2 \
+    nfs-common \
     poppler-utils \
     python3-distutils \
     sane-utils \
