Testing setting updates
- Remove integration testing settings
- Make GitLab CI testing setting a submodule of testing.
- Remove unused MySQL testing setting module.
- Remove explicit definition of the SQLite memory testing
  database. This is done by Django by default
  https://docs.djangoproject.com/en/4.0/topics/testing/overview/#the-test-database

Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/mayan/apps/platform/templates/platform/gitlab-ci.tmpl
+++ b/mayan/apps/platform/templates/platform/gitlab-ci.tmpl
@@ -372,8 +372,8 @@ job_postgres_test:
     - . venv/bin/activate
     - pip install psycopg2==$PYTHON_PSYCOPG2_VERSION
     - export MAYAN_DATABASES="{'default':{'ENGINE':'django.db.backends.postgresql','NAME':'{{ DEFAULT_DATABASE_NAME }}','PASSWORD':'{{ DEFAULT_DATABASE_PASSWORD }}','USER':'{{ DEFAULT_DATABASE_USER }}','HOST':'postgres'}}"
-    - make test-all SETTINGS=mayan.settings.integration.gitlab-ci
-    - make test-all-migrations SETTINGS=mayan.settings.integration.gitlab-ci
+    - make test-all SETTINGS=mayan.settings.testing.gitlab-ci
+    - make test-all-migrations SETTINGS=mayan.settings.testing.gitlab-ci
   services:
     - {{ DOCKER_POSTGRES_IMAGE_VERSION }}
   tags:
@@ -387,8 +387,8 @@ job_sqlite_test:
   <<: *job_base_test
   script:
     - . venv/bin/activate
-    - make test-all SETTINGS=mayan.settings.integration.gitlab-ci
-    - make test-all-migrations SETTINGS=mayan.settings.integration.gitlab-ci
+    - make test-all SETTINGS=mayan.settings.testing.gitlab-ci
+    - make test-all-migrations SETTINGS=mayan.testing.integration.gitlab-ci
 
 # Deploy
 
