Update required Python version
Specify Python versions 3.5 to 3.9.

Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/setup.py.tmpl
+++ b/setup.py.tmpl
@@ -87,6 +87,7 @@ setup(
         'Programming Language :: Python :: 3.6',
         'Programming Language :: Python :: 3.7',
         'Programming Language :: Python :: 3.8',
+        'Programming Language :: Python :: 3.9',
         'Topic :: Internet :: WWW/HTTP',
         'Topic :: Internet :: WWW/HTTP :: WSGI :: Application',
         'Topic :: Communications :: File Sharing',
