--- a/mayan/apps/appearance/templates/appearance/app/foot.html
+++ b/mayan/apps/appearance/templates/appearance/app/foot.html
@@ -23,29 +23,43 @@
 <script src="{% static 'appearance/node_modules/jquery-form/dist/jquery.form.min.js' %}" type="text/javascript"></script>
 <script src="{% static 'appearance/js/mayan_app.js' %}" type="text/javascript"></script>
 <script src="{% static 'appearance/js/partial_navigation.js' %}" type="text/javascript"></script>
-<script src="{% static 'appearance/js/base.js' %}" type="text/javascript"></script>
 
 <script>
-    {% smart_setting "APPEARANCE_MENU_POLLING_INTERVAL" as menu_polling_interval %}
+    {# Transfer variable from Django to javascript #}
+    const djangoDEBUG = {% if debug %}true{% else %}false{% endif %};
+
+    {% smart_setting "APPEARANCE_AJAX_REDIRECTION_CODE" as appearance_ajax_redirection_code %}
+    {% smart_setting "APPEARANCE_MENU_POLLING_INTERVAL" as appearance_menu_polling_interval %}
+    {% smart_setting "COMMON_HOME_VIEW" as common_home_view %}
+
     const app = new MayanApp({
         ajaxMenusOptions: [
             {
                 callback: function (options) {
                     MayanApp.updateNavbarState();
                 },
-                interval: {% if menu_polling_interval == 'None' %}null{% else %}{{ menu_polling_interval }}{% endif %},
+                interval: {% if menu_polling_interval == 'None' %}null{% else %}{{ appearance_menu_polling_interval }}{% endif %},
                 menuSelector: '#menu-main',
                 name: 'menu_main',
                 url: '{% url "rest_api:template-detail" "menu_main" %}'
             },
             {
-                interval: {% if menu_polling_interval == 'None' %}null{% else %}{{ menu_polling_interval }}{% endif %},
+                interval: {% if menu_polling_interval == 'None' %}null{% else %}{{ appearance_menu_polling_interval }}{% endif %},
                 menuSelector: '#menu-topbar',
                 name: 'menu_topbar',
                 url: '{% url "rest_api:template-detail" "menu_topbar" %}'
             },
         ],
-        messagePosition: '{% smart_setting "APPEARANCE_MESSAGE_POSITION" %}'
+        messagePosition: '{% smart_setting "APPEARANCE_MESSAGE_POSITION" %}',
+    });
+
+    const partialNavigation = new PartialNavigation({
+        initialURL: '{% url common_home_view %}',
+        disabledAnchorClasses: [
+            'btn-multi-item-action', 'disabled', 'pagination-disabled'
+        ],
+        excludeAnchorClasses: ['fancybox', 'new_window', 'non-ajax'],
+        redirectionCode: {{ appearance_ajax_redirection_code }}
     });
 
     app.addAfterBaseLoadCallback({func: app.doToastrMessages, self: app});
